Add contact history as optional relation to Person (#237)
* feat: extend DB model

* fix: reinit script update, and bump version

* fix: adapt scripts to comply with identification_state use

* fix: distinct DTOs for person and contactHistoryPerson

* fix: revert closabe SU detection

* feat: add campaign attribute to allow interviewer to know if future contacts should be collected