@@ -13,17 +13,20 @@ import fr.insee.pearljam.api.dto.interviewer.InterviewerContextDto;
 import fr.insee.pearljam.api.dto.message.MessageDto;
 import fr.insee.pearljam.api.dto.organizationunit.OrganizationUnitContextDto;
 import fr.insee.pearljam.api.dto.organizationunit.OrganizationUnitDto;
-import fr.insee.pearljam.api.dto.person.PersonDto;
 import fr.insee.pearljam.api.dto.phonenumber.PhoneNumberDto;
 import fr.insee.pearljam.api.dto.sampleidentifier.SampleIdentifiersDto;
-import fr.insee.pearljam.api.dto.surveyunit.SurveyUnitContextDto;
 import fr.insee.pearljam.api.dto.surveyunit.SurveyUnitInterviewerLinkDto;
 import fr.insee.pearljam.api.dto.user.UserContextDto;
 import fr.insee.pearljam.api.dto.user.UserDto;
 import fr.insee.pearljam.api.repository.*;
-import fr.insee.pearljam.api.service.*;
+import fr.insee.pearljam.api.service.MessageService;
+import fr.insee.pearljam.api.service.PreferenceService;
+import fr.insee.pearljam.api.service.UserService;
 import fr.insee.pearljam.api.surveyunit.dto.CommentDto;
 import fr.insee.pearljam.api.surveyunit.dto.ContactOutcomeDto;
+import fr.insee.pearljam.api.surveyunit.dto.PersonDto;
+import fr.insee.pearljam.api.surveyunit.dto.SurveyUnitCreationDto;
+import fr.insee.pearljam.api.surveyunit.dto.contactHistory.PreviousContactHistoryDto;
 import fr.insee.pearljam.api.utils.AuthenticatedUserTestHelper;
 import fr.insee.pearljam.api.utils.MockMvcTestUtils;
 import fr.insee.pearljam.api.utils.ScriptConstants;
@@ -60,7 +63,8 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.authentication;
 import static org.springframework.test.context.jdbc.Sql.ExecutionPhase.AFTER_TEST_METHOD;
@@ -920,7 +924,7 @@ class TestAuthKeyCloak {
 				.andExpectAll(status().isOk());
 		List<MessageDto> messages = messageRepository
 				.findMessagesDtoByIds(messageRepository.getMessageIdsByInterviewer("INTW1"));
-		assertEquals("TEST", messages.get(0).getText());
+		assertEquals("TEST", messages.getFirst().getText());
 	}
 
 	/**
@@ -1026,7 +1030,6 @@ class TestAuthKeyCloak {
         .perform(get("/api/survey-units/closable")
             .with(authentication(LOCAL_USER))
             .accept(MediaType.APPLICATION_JSON))
-        .andDo(print())
         .andExpectAll(
             status().isOk(),
             jsonPath("$.[?(@.id == '20')]").exists(),
@@ -1485,11 +1488,15 @@ class TestAuthKeyCloak {
 	@Test
 	@Order(111)
 	void testPostSurveyUnits() throws Exception {
-		SurveyUnitContextDto surveyUnit = generateSurveyUnit("8");
+		SurveyUnitCreationDto surveyUnit = generateSurveyUnit("8");
 		surveyUnit.setComments(Set.of(new CommentDto(CommentType.INTERVIEWER, "interviewer comment")));
 		surveyUnit.setContactOutcome(new ContactOutcomeDto(1743078880000L,ContactOutcomeType.INA,2));
 		surveyUnit.setContactAttempts(List.of(new ContactAttemptDto(1743078880000L,Status.MES,Medium.TEL),new ContactAttemptDto(1743078900000L,Status.INA,Medium.FIELD)));
 		surveyUnit.setClosingCause(new ClosingCauseDto(1843078880000L,ClosingCauseType.NPA));
+		surveyUnit.setContactHistory(new PreviousContactHistoryDto("comment",
+				ContactOutcomeType.INA,
+				List.of()
+		));
 
 		mockMvc.perform(post(Constants.API_SURVEYUNITS)
 						.with(authentication(ADMIN))
@@ -1529,7 +1536,7 @@ class TestAuthKeyCloak {
 	@Test
 	@Order(113)
 	void testPostSurveyUnitsDuplicateInBody() throws Exception {
-		SurveyUnitContextDto su = generateSurveyUnit("9");
+		SurveyUnitCreationDto su = generateSurveyUnit("9");
 
 		mockMvc.perform(post("/api/survey-units")
 						.with(authentication(ADMIN))
@@ -1549,7 +1556,7 @@ class TestAuthKeyCloak {
 	@Test
 	@Order(114)
 	void testPostSurveyUnitsOUNotExist() throws Exception {
-		SurveyUnitContextDto su = generateSurveyUnit("9");
+		SurveyUnitCreationDto su = generateSurveyUnit("9");
 		// Use an unknown organization unit
 		su.setOrganizationUnitId("OU-TEST");
 
@@ -1571,7 +1578,7 @@ class TestAuthKeyCloak {
 	@Test
 	@Order(115)
 	void testPostSurveyUnitsCampaignNotExist() throws Exception {
-		SurveyUnitContextDto su = generateSurveyUnit("9");
+		SurveyUnitCreationDto su = generateSurveyUnit("9");
 		su.setCampaign("campaignTest");
 
 		mockMvc.perform(post("/api/survey-units")
@@ -1593,7 +1600,7 @@ class TestAuthKeyCloak {
 	@Test
 	@Order(117)
 	void testPostSurveyUnitsSUNotValid() throws Exception {
-		SurveyUnitContextDto su = generateSurveyUnit("");
+		SurveyUnitCreationDto su = generateSurveyUnit("");
 
 		// ID null
 		mockMvc.perform(post("/api/survey-units")
@@ -2077,8 +2084,8 @@ class TestAuthKeyCloak {
 		}
 	}
 
-	private SurveyUnitContextDto generateSurveyUnit(String id) {
-		SurveyUnitContextDto su = new SurveyUnitContextDto();
+	private SurveyUnitCreationDto generateSurveyUnit(String id) {
+		SurveyUnitCreationDto su = new SurveyUnitCreationDto();
 		su.setId(id);
 		su.setCampaign("SIMPSONS2020X00");
 		su.setOrganizationUnitId("OU-NORTH");
@@ -2088,15 +2095,16 @@ class TestAuthKeyCloak {
 		addr.setL2("1 rue test");
 		addr.setL3("TEST");
 		su.setAddress(addr);
-		PersonDto p = new PersonDto();
-		p.setFirstName("test");
-		p.setLastName("test");
-		p.setEmail("test@test.com");
-		p.setFavoriteEmail(true);
-		p.setBirthdate(1564656540L);
-		p.setPrivileged(true);
-		p.setTitle(Title.MISTER);
-		p.setPhoneNumbers(List.of(new PhoneNumberDto(Source.FISCAL, true, "+33666666666")));
+		PersonDto p = new PersonDto(
+				null,
+				Title.MISTER,
+				"test",
+				"test",
+				"test@test.com",
+				1564656540L,
+				true,
+				List.of(new PhoneNumberDto(Source.FISCAL, true, "+33666666666"))
+		);
 		List<PersonDto> lstPerson = List.of(p);
 		su.setPersons(lstPerson);
 		su.setSampleIdentifiers(new SampleIdentifiersDto(0, "0", 0, 0, 0, 0, 0, 0, 0, "0", "0"));
